	team-leaders for now; something is going wrong in procmail.

	* webgen/changes.all, webgen/software.all: Textual tweaks.

	* bin/create-mail-aliases: Make team-leaders rule less restrictive.

	* webgen/changes.all, webgen/layout.html.in, webgen/files.all:
	Textual tweaks and additions.

	* webgen/files.all: Further tweaks and margin adjustments.

2007-06-26  Benno Schulenberg  <benno@vertaalt.nl>

	* TODO: Update the steps to be taken during the server switch.

	* webgen/html-to-cgi.py, webgen/registry.cgi.in: Delete obsolete files.

	* lib/config.py, webgen/Makefile: Adjust for deletion of CGI stuff.

	* webgen/changes.all, webgen/layout.html.in, webgen/Makefile:
	Add a page that documents the most notable changes made to the scripts
	during the move from Montréal to Vrijschrift.

	* webgen/files.all: Update the descriptions for the current situation.

2007-06-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Add the ability to regenerate just the
	domains or teams given on the command line.

	* bin/generate-static-pages, README: Adjust docstring and manual.

	* bin/generate-static-pages: Handle mistyped arguments better.

	* bin/create-mail-aliases, registry/Makefile: Also create a procmailrc
	file with rules to reach team lists.

	* lib/localweb.py: On the domain pages, use the translator's current
	email address when it exists, instead of the one from the PO file.

2007-06-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/htmlpage.py: Give each HTML page a Content-Type meta header tag,
	hard-coded as UTF-8, as everything should be in that encoding now.  If
	some page is not, it's a fault, and should get reported.

	* webgen/welcome.html, webgen/software.all: Fix a typo, and point to
	'poEdit' instead of the dead 'gtranslator'.

	* registry/registry.sgml: Synced with Montréal.

	* registry/Makefile: Fix name of script.

	* lib/localweb.py: Clearer error messages during page generation.
