@@ -13,6 +13,9 @@
 
 	* webgen/files.all: Further tweaks and margin adjustments.
 
+	* bin/make-package-links.sh: Make the grep command more precise,
+	to avoid creating some broken symlinks.
+
 2007-06-26  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* TODO: Update the steps to be taken during the server switch.
